v0.8.2: repo init
