# docs/swagger.json
@@ -4,7 +4,7 @@
         "description": "API Server for my github project",
         "title": "Mini-Go-Server",
         "contact": {},
-        "version": "0.7.3"
+        "version": "0.8.2"
     },
     "paths": {
         "/invention": {
@@ -16,7 +16,7 @@
                 "tags": [
                     "api/v1"
                 ],
-                "summary": "Get all inventions",
+                "summary": "Get",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -40,7 +40,7 @@
                 "tags": [
                     "api/v1"
                 ],
-                "summary": "Add a new invention",
+                "summary": "Add",
                 "parameters": [
                     {
                         "description": "Invention entity",
@@ -71,7 +71,7 @@
                 "tags": [
                     "api/v1"
                 ],
-                "summary": "Get an invention by id",
+                "summary": "Get",
                 "parameters": [
                     {
                         "type": "integer",
@@ -86,6 +86,75 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/entity.Invention"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update an existing invention with the input payload",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api/v1"
+                ],
+                "summary": "Update",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the invention to update",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Invention entity",
+                        "name": "invention",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.Invention"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Invention updated successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete an existing invention by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api/v1"
+                ],
+                "summary": "Delete",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the invention to delete",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Invention deleted successfully",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -114,7 +183,7 @@
                     "example": "123"
                 },
                 "inventor": {
-                    "$ref": "#/definitions/entity.Person"
+                    "$ref": "#/definitions/entity.Inventor"
                 },
                 "title": {
                     "type": "string",
@@ -123,7 +192,7 @@
                 }
             }
         },
-        "entity.Person": {
+        "entity.Inventor": {
             "type": "object",
             "required": [
                 "email",
@@ -144,6 +213,9 @@
                 "firstname": {
                     "type": "string",
                     "example": "John"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "lastname": {
                     "type": "string",
